--- a/client/template.html
+++ b/client/template.html
@@ -5,8 +5,6 @@
         <title></title>
     </head>
     <body>
-        <div id="root">
-            <!-- app -->
-        </div>
+        <div id="root"><!-- app --></div>
     </body>
 </html>
